syntax                          = "proto3";

package event;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package               = "github.com/carv-protocol/kratos-ddd/api/event;event";

// The event message for user login
message Event {
  string id = 1;
  string name = 2;
  bytes payload = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// The auth service definition.
service EventHandler {
  // Login by web3 wallet
  rpc HandleEvent (Event) returns (google.protobuf.Empty);
}